--- a/src/app/modules/module-settings/pages/salary-scale/department-list.component.html
+++ b/src/app/modules/module-settings/pages/salary-scale/department-list.component.html
@@ -28,7 +28,7 @@
   <div modal-body>
     <div class="my-form">
       <div class="form-group">
-        <label>Department Name</label>
+        <label>Name</label>
         <div>
           <input
             class="form-control"
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label>Department Code</label>
+        <label>Code</label>
         <div>
           <input
           class="form-control"
