--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -477,3 +477,7 @@ opacity: 1;
   font-size: 12px;
   width: 100%;
 }
+
+.nb-theme-smartace .overlay-backdrop {
+  background: rgba(0, 0, 0, 0.9);
+}
