updated payroll modules

--- a/src/app/modules/payroll/paymentcreate/paymentcreate.component.html
+++ b/src/app/modules/payroll/paymentcreate/paymentcreate.component.html
@@ -30,6 +30,12 @@
                     <input type="text" nbInput fullWidth placeholder="Account Number">
                 </div>
             </div>
+            <div class="form-group row">
+                <label for="Account Number" class="label col-sm-4 col-form-label listsubheader">Bank</label>
+                <div class="col-sm-8">
+                   <select name="" id="" class="form-control"></select>
+                </div>
+            </div>
           
 
             <div class="form-group row" style="margin-top: 2rem; margin-bottom: 15rem;" >
