--- a/src/app/modules/payroll/payrollcomponent/payrollcomponent.component.html
+++ b/src/app/modules/payroll/payrollcomponent/payrollcomponent.component.html
@@ -29,7 +29,7 @@
                 </span>
             </div>
             <div style="padding: 20px;">
-                <button sty nbButton status="primary" (click)="createNew()" style="align-items: flex-start">continue</button>
+                <button sty nbButton status="primary" (click)="setUp()" style="align-items: flex-start">continue</button>
             </div>
 
         </div>
@@ -40,11 +40,11 @@
             <div style="padding: 20px;">
                 <h6>Set up a Pay Scale</h6>
                 <span>
-                    Click on the button to create a performance cycle.
+                    Click on the button to set up a Payscale
                 </span>
             </div>
             <div style="padding: 20px;">
-                <button sty nbButton status="primary" (click)="createNew()" style="align-items: flex-start">
+                <button sty nbButton status="primary" (click)="AddNew()" style="align-items: flex-start">
                     continue</button>
             </div>
 
