--- a/src/app/modules/self-service/dashboard/dashboard.component.html
+++ b/src/app/modules/self-service/dashboard/dashboard.component.html
@@ -320,6 +320,22 @@
 
                         </div>
                     </div>
+
+                    <div class="card ">
+                        <div class="card-body" style="display: flex; flex-direction: row;">
+                            <div>
+                                <img src="assets/icons/Payslips.jpg" alt=""
+                                    style="height: 50px; margin-left: 20px; margin-right: 20px;">
+                            </div>
+                            <div>
+                                <p class="card-text" style="font-size: smaller;">Annoucement</p>
+                                <p class="card-text opaq" style="font-size: xx-small; margin-top: -15px;">See
+                                    Annoucements
+                                    made on the system</p>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
