--- a/src/app/modules/payroll/paymenysetup/paymenysetup.component.html
+++ b/src/app/modules/payroll/paymenysetup/paymenysetup.component.html
@@ -1,5 +1,5 @@
-<p>paymenysetup works!</p>
-<ngx-componentsheader pageName='Create a Payment Institution'></ngx-componentsheader>
+
+<ngx-componentsheader pageName='Set up a Payment Element'></ngx-componentsheader>
 
 <nb-card style="margin-top: 3rem;">
     <nb-card-body>
@@ -26,7 +26,8 @@
             </div>
 
             <div class="form-group row">
-                <label for=" Element Category" class="label col-sm-4 col-form-label listsubheader">Element Category</label>
+                <label for=" Element Category" class="label col-sm-4 col-form-label listsubheader">Element
+                    Category</label>
                 <div class="col-sm-8">
                     <select aria-placeholder="select" name="" id="" class="form-control"></select>
                 </div>
@@ -38,24 +39,74 @@
                     <select aria-placeholder="select" name="" id="" class="form-control"></select>
                 </div>
             </div>
+            <div class="form-group row" style="margin-top: 15px;">
+                <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Payment Mode</label>
+                <div class="col-sm-8">
+                    <nb-radio-group [(ngModel)]="selectedOption" class="d-flex">
+                        <nb-radio value="1">Amount</nb-radio>
+                        <nb-radio value="2">Variable</nb-radio>
+
+                    </nb-radio-group>
+                </div>
+            </div>
+
+            <div class="form-group row" style="margin-top: 15px;">
+                <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Payment Mode</label>
+                <div class="col-sm-8">
+                    <div style="flex-wrap: wrap; display: flex; flex-direction: row; ">
+                        <div>
+                            <input type="text" nbInput fullWidth placeholder="placeholder tetx">
+                        </div>
+                        <div style="display: flex; flex-direction: row; align-items: center;">
+                            <p style="margin-left: 1.2rem; align-items: center; padding-top: 0.2rem; font-weight: bold;" >Of</p>
+                            <div style="margin-left: 1.2rem;">
+                                <input type="text" nbInput fullWidth placeholder="placeholder tetx">
+                            </div>
+                        </div>
+                    </div>
+                   
+                
+                </div>
+            </div>
             <div class="form-group row">
                 <label for="Account Number" class="label col-sm-4 col-form-label listsubheader">Account Number</label>
                 <div class="col-sm-8">
                     <input type="text" nbInput fullWidth placeholder="Account Number">
                 </div>
             </div>
-          
 
-            <div class="form-group row" style="margin-top: 2rem; margin-bottom: 15rem;" >
-                <label for="Account Number" class="label col-sm-4 col-form-label listsubheader"></label>
-                <div class="col-sm-8 d-flex">
-                    <button nbButton status="primary" class="d-flex column">Save and Continue</button>
-                    <button nbButton outline status="primary" class="d-flex column"
-                        style="background-color: white; margin-left: 2rem;">Save and Add new</button>
-                    
+            <div class="form-group row">
+                <label for="Account Number" class="label col-sm-4 col-form-label listsubheader">Payment
+                    Instituton</label>
+                <div class="col-sm-8">
+                    <select class="form-control" name="" id=""></select>
                 </div>
             </div>
-           
+
+
+
+            <div class="form-group row" style="margin-top: 15px;">
+                <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Deduct Tax</label>
+                <div class="col-sm-8">
+                    <nb-radio-group [(ngModel)]="selectedOption" class="d-flex">
+                       
+                        <nb-radio value="2"></nb-radio>
+
+                    </nb-radio-group>
+                </div>
+            </div>
+
+
+            <div class="form-group row" style="margin-top: 2rem; margin-bottom: 15rem;">
+                <label for="Account Number" class="label col-sm-4 col-form-label listsubheader"></label>
+                <div class="col-sm-8 d-flex">
+                    <button nbButton status="primary" class="d-flex column">Save</button>
+                    <button nbButton outline status="primary" class="d-flex column"
+                        style="background-color: white; margin-left: 2rem;">Cancel</button>
+
+                </div>
+            </div>
+
 
 
 
