--- a/src/app/modules/career-succession/planning/planning.component.html
+++ b/src/app/modules/career-succession/planning/planning.component.html
@@ -1,134 +1,87 @@
-<ngx-componentsheader [requiredButton]="[{name:'plan', label:'Create succession plan'}]" (buttonClick)="addPlan()" pageName='Roles'></ngx-componentsheader>
+<ngx-componentsheader *ngIf="!newPlan" [requiredButton]="[{name:'plan', label:'Create Plan'}]" (buttonClick)="addPlan()" pageName='Succession Plans'></ngx-componentsheader>
+<ngx-componentsheader *ngIf="newPlan" pageName='Create Succession Plan'></ngx-componentsheader>
+
 <div style="display: flex; flex-direction: row; justify-content: flex-start; flex: auto; padding-bottom: 5px;">
-  <!-- <a href="" style="color: #000;"><span><i class="fas fa-arrow-circle-left"></i>Back</span></a><button nbButton style="background-color: #4847E0; color: #fff; padding-bottom: 5px;">Edit</button> -->
-  <span><i class="far fa-arrow-alt-circle-left"></i><a (click)="goback()" style="margin-left: 3px;">Back</a></span>
 </div>
-<div>
+
+<div *ngIf="!newPlan">
   <nb-card>
-    <nb-card-header>Employee Information</nb-card-header>
     <nb-card-body>
-        <div class="row" style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
-          <div class="col-md">
-            <img src="assets/icons/department.jpg" style="width:3rem;">
-          </div>
-
-          <div class="col-md-11">
-            <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
-                <div class="col-md-4">
-                    <span style="font-weight: 600; padding-right:25px;">Name:</span><span>Dami Ogunmola</span>
-                  </div>
-
-                  <div class="col-md-4">
-                    <span style="font-weight: 600; padding-right:25px;">Department:</span><span>Marketing</span>
-                  </div>
-
-                  <div class="col-md-4">
-                    <span style="font-weight: 600; padding-right:25px;">Level:</span><span>Grade 14</span>
-                  </div>
-                </div>
-
-                <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
-                  <div class="col-md-4">
-                      <span style="font-weight: 600; padding-right:25px;">Job Title:</span><span>Managing Director</span>
-                    </div>
-
-                    <div class="col-md-4">
-                      <span style="font-weight: 600; padding-right:25px;">Unit/Division:</span><span>Sales</span>
-                    </div>
-
-                    <div class="col-md-4">
-                      <span style="font-weight: 600; padding-right:25px;">Location:</span><span>Lagos</span>
-                    </div>
-                  </div>
-            </div>
-          </div>
+      <ngx-tableheader></ngx-tableheader>
+      <ngx-tablecomponent  [tableColum]="successionTable"></ngx-tablecomponent>
     </nb-card-body>
   </nb-card>
-        </div>
+</div>
 
-        <div style="padding: 10px"></div>
-
-
-<nb-card>
-  <nb-card-header>Role Competencies</nb-card-header>
-  <nb-card-body>
-    <div>
-      <div class="row" style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
-        <div class="col-md-6">
-          <span class="title">Qualifications</span>
-          <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;">
-            <span class="title">10 years' experience in a supervisory role</span>
-            <span class="date">From 2010 - 2014</span>
+  <div *ngIf="newPlan">
+    <nb-card>
+      <nb-card-body>
+        <h6>Job title and Department details</h6>
+        <form>
+          <div class="form-group row mydiv">
+            <label for="Title" class="col-sm-3 col-form-label mylabel">Title</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <input type="text" class="form-control" id="jobTitle" placeholder="Plan Title">
+            </div>
           </div>
 
-          <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;">
-            <span class="title">M.Sc in Business Administration</span>
-            <span class="date">From 2010 - 2014</span>
+          <div class="form-group row mydiv">
+            <label for="Employee" class="col-sm-3 col-form-label mylabel">Employee</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <ngx-employee-master-search></ngx-employee-master-search>
+            </div>
           </div>
 
-          <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;">
-            <span class="title">B.Sc in Business Management</span>
-            <span class="date">From 2010 - 2014</span>
+          <div class="form-group row mydiv">
+            <label for="Position" class="col-sm-3 col-form-label mylabel">Position</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <ngx-employee-master-search></ngx-employee-master-search>
+            </div>
           </div>
 
-          <div style="padding: 15px;"></div>
-          <span class="title">Abilities</span>
-          <div style="padding: 5px;"></div>
-          <div>
-            <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
-            <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
-            <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
-            <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
+          <div class="form-group row mydiv">
+            <label for="Succession Candidate" class="col-sm-3 col-form-label mylabel">Succession Candidate</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <ngx-employee-master-search></ngx-employee-master-search>
+            </div>
           </div>
 
-
-
-        </div>
-
-        <div class="col-md-6">
-          <span class="title">Certifications</span>
-          <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;">
-            <span><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Google Digital Marketing Certification</span>
-            <span ><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Microsoft Azure Certification</span>
-            <span><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Asp.Net Certification</span>
+          <div class="form-group row mydiv">
+            <label for="Readiness" class="col-sm-3 col-form-label mylabel">Readiness to Start</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <select class="custom-select" required>
+                <option value="">Select </option>
+                <option value="1">Stage One</option>
+                <option value="2">Stage Two</option>
+                <option value="3">Stage Three</option>
+              </select>
+            </div>
           </div>
 
-          <div style="padding: 50px;"></div>
-
-          <span class="title">Skills</span>
-          <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;">
-            <span>HTML</span>
-            <nb-progress-bar [value]="80" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>Javascript</span>
-            <nb-progress-bar [value]="90" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>CSS</span>
-            <nb-progress-bar [value]="40" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>Figma</span>
-            <nb-progress-bar [value]="30" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>Python</span>
-            <nb-progress-bar [value]="75" size="tiny" status="primary"></nb-progress-bar>
+          <div class="form-group row mydiv">
+            <label for="Purpose" class="col-sm-3 col-form-label mylabel">Purpose</label>
+            <div class="col-sm-6 col-md-6 col-lg-6">
+              <select class="custom-select" required>
+                <option value="">Select </option>
+                <option value="1">Stage One</option>
+                <option value="2">Stage Two</option>
+                <option value="3">Stage Three</option>
+              </select>
+            </div>
           </div>
-        </div>
-      </div>
 
-    </div>
-
-  </nb-card-body>
-</nb-card>
-<div style="padding: 10px"></div>
-<nb-card>
-  <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
-    <h5 style="padding:20px;">Potential Succesors</h5><a href="" style="padding:20px; font-weight:600; text-decoration: underline;">View Tree</a>
+          <div class="form-group row">
+            <label class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
+            <div class="col-sm-6">
+              <button nbButton status="primary">Create Plan</button>
+              <span style="padding: 8px;"></span>
+              <button nbButton style="color: #4847E0;">Cancel</button>
+            </div>
+          </div>
+        </form>
+      </nb-card-body>
+    </nb-card>
   </div>
-  <ngx-tableheader></ngx-tableheader>
-  <ngx-tablecomponent  [tableColum]="successionTable"></ngx-tablecomponent>
-</nb-card>
+
+
+
