--- a/src/app/modules/training/administration/administration.component.html
+++ b/src/app/modules/training/administration/administration.component.html
@@ -31,48 +31,48 @@
       <form>
         <div class="form-group row mydiv">
           <label for="vendorName" class="col-sm-3 col-form-label mylabel">Vendor Name</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="text" class="form-control" id="vendorName" placeholder="Vendor Name">
           </div>
         </div>
         <div class="form-group row mydiv">
           <label for="contactPerson" class="col-sm-3 col-form-label mylabel">Primary Contact Person</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="text" class="form-control" id="contactPerson" placeholder="Primary Contact Person">
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="phone" class="col-sm-3 col-form-label mylabel">Phone</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="tel" class="form-control" id="phone" placeholder="Phone">
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="email" class="col-sm-3 col-form-label mylabel">Email</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="email" class="form-control" id="email" placeholder="Email">
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="vendorTag" class="col-sm-3 col-form-label mylabel">Vendor Tag</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="text" class="form-control" id="vendorName" placeholder="Vendor Tag">
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="website" class="col-sm-3 col-form-label mylabel">Website</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="url" class="form-control" id="website" placeholder="Website">
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="specialization" class="col-sm-3 col-form-label mylabel">Specialization</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-lg-4 col-sm-4">
               <select class="custom-select" required>
                 <option value="">Select </option>
                 <option value="1">One</option>
@@ -84,7 +84,7 @@
 
         <div class="form-group row">
           <label for="specialization" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <button type="submit" class="btn my-button" style="padding: 5px 20px;">Save</button>
             <br>
             <div style="padding: 10px 10px 10px 0px;"><span>
@@ -110,7 +110,7 @@
 
             <ngx-file-upload></ngx-file-upload>
 
-            <div class="col-sm-4">
+            <div class="col-md-4 col-lg-4 col-sm-4">
               <i class="fa fa-download" style="color: #4847E0; padding: 10px;" aria-hidden="true"></i>
               <span style="color: #4847E0; padding: 10px;" >Download Template</span>
             </div>
@@ -118,7 +118,7 @@
 
           <div class="form-group row">
             <label for="save" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
-            <div class="col-sm-4" style="padding-left: 0px;">
+            <div class="col-md-4 col-lg-4 col-sm-4" style="padding-left: 0px;">
               <button type="submit" class="btn my-button" style="padding: 5px 20px;">Save</button>
               <div style="padding: 10px 10px 10px 0px;"><span>
                 <a (click)="uploadVendor()" style="cursor: pointer; color: #4847E0; text-decoration: underline;">Add Vendor through Excel</a></span></div>
@@ -156,20 +156,20 @@
     <form>
       <div class="form-group row mydiv">
         <label for="Title" class="col-sm-3 col-form-label mylabel">Title</label>
-        <div class="col-sm-4">
+        <div class="col-md-4 col-lg-4 col-sm-4">
           <input type="text" class="form-control" id="vendorName" placeholder="Enter Text">
         </div>
       </div>
       <div class="form-group row mydiv">
         <label for="Specialization" class="col-sm-3 col-form-label mylabel">Specialization</label>
-        <div class="col-sm-4">
+        <div class="col-md-4 col-lg-4 col-sm-4">
           <input type="text" class="form-control" id="contactPerson" placeholder="Specialization">
         </div>
       </div>
 
         <div class="form-group row mydiv">
           <label for="phone" class="col-sm-3 col-form-label mylabel">Category</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <nb-radio-group style="display:flex; flex-direction: row; justify-content: flex-start;">
               <nb-radio value="1">Internal</nb-radio>
               <nb-radio value="2">External</nb-radio>
@@ -179,7 +179,7 @@
 
         <div *ngIf="category =='External'" class="form-group row mydiv">
           <label for="website" class="col-sm-3 col-form-label mylabel">Vendor</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <select class="custom-select" required>
               <option value="">Select </option>
               <option value="1">One</option>
@@ -191,35 +191,35 @@
 
         <div class="form-group row mydiv">
           <label for="cost" class="col-sm-3 col-form-label mylabel">Cost per head</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="text" class="form-control" name="costPerHead" id="cost" placeholder="Enter Amount">
           </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="training" class="col-sm-3 col-form-label mylabel">No of Trainees</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="number" class="form-control" name="noOfTrainees" id="trainees" placeholder="Enter Text">
         </div>
         </div>
 
         <div class="form-group row mydiv">
           <label for="amount" class="col-sm-3 col-form-label mylabel">Overall budget cost (optional)</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <input type="text" class="form-control" id="amount" placeholder="Enter Amount">
           </div>
         </div>
 
         <div *ngIf="category =='Internal'" class="form-group row mydiv">
           <label for="content" class="col-sm-3 col-form-label mylabel">Content</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <ngx-file-upload></ngx-file-upload>
           </div>
         </div>
 
         <div *ngIf="category =='Internal'" class="form-group row mydiv">
           <label for="resourceperson" class="col-sm-3 col-form-label mylabel">Resource Person</label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <select class="custom-select" name="resourcePerson" required>
               <option value="">Select </option>
               <option value="1">One</option>
@@ -231,7 +231,7 @@
 
         <div class="form-group row">
           <label for="specialization" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
-          <div class="col-sm-4">
+          <div class="col-md-4 col-lg-4 col-sm-4">
             <button type="submit" class="btn my-button" style="padding: 7px 20px;">Save</button>
             <span style="padding: 8px;"></span>
             <button type="submit" class="btn cancel-button" style="padding: 5px 20px;">Cancel</button>
