Completed department page and initialized others

--- a/src/app/modules/module-settings/pages/department-list/department-list.component.html
+++ b/src/app/modules/module-settings/pages/department-list/department-list.component.html
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div modal-actions>
-    <ngx-loadable-button (click)="submitForm()" [loading]="loading" style="margin-right: 1rem;">Save</ngx-loadable-button>
+    <ngx-loadable-button (click)="submitForm()" [loading]="loadingSave" style="margin-right: 1rem;">Save</ngx-loadable-button>
     <!-- <button nbButton status="primary" (click)="submitForm()">save</button> -->
     <button nbButton status="primary" outline (click)="hideModal()">
       cancel
