--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -481,3 +481,10 @@ opacity: 1;
 .nb-theme-smartace .overlay-backdrop {
   background: rgba(0, 0, 0, 0.9);
 }
+
+.my-form > h4{
+  font-family: Rubik;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
