Uploaded Employee Records

--- a/src/app/modules/employeemodule/employeerecords/employeerecords.component.html
+++ b/src/app/modules/employeemodule/employeerecords/employeerecords.component.html
@@ -6,6 +6,8 @@
     <nb-card-body>
         <ngx-tableheader></ngx-tableheader>
 
-        <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
-        </nb-card-body>
-        </nb-card>
+        <ngx-tablecomponent [tableColum]="tableColumns" [userData]="allMyEmployees">
+
+        </ngx-tablecomponent>
+    </nb-card-body>
+</nb-card>
