--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -414,7 +414,7 @@ opacity: 1;
   &::before{
   content: '';
   height: 2.5rem;
-  border: 3px solid #4847E0;   
+  border: 3px solid #4847E0;
   display: block;
   }
 }
@@ -423,7 +423,7 @@ opacity: 1;
   &::before{
   content: '';
   height: 2.5rem;
-  border: 3px solid inherit;   
+  border: 3px solid inherit;
   display: block;
   }
 }
@@ -480,4 +480,8 @@ opacity: 1;
 
 .nb-theme-smartace .overlay-backdrop {
   background: rgba(0, 0, 0, 0.9);
+}
+
+.my-form > h4{
+  font-size: 1.2rem;
 }
