--- a/src/app/modules/expense/expense-request/expense-request.component.html
+++ b/src/app/modules/expense/expense-request/expense-request.component.html
@@ -22,9 +22,11 @@
   <ngx-tablecomponent
     *ngIf="!showEmpty"
     [tableColum]="tableColumns"
+    [actions]="tableActions"
     [userData]="tableData"
     [loading]="loading"
     (pageChange)="loadNewPage($event)"
+    (actionClick)="tableActionClicked($event)"
   ></ngx-tablecomponent>
 </div>
 <ngx-side-modal [(show)]="showModal">
@@ -80,6 +82,8 @@
     </div>
   </div>
   <div modal-actions>
-    <button nbButton status="primary">save</button>
+    <ngx-loadable-button (click)="submitForm()" [loading]="loadingSave" style="margin-right: 1rem;">Save</ngx-loadable-button>
+    <!-- <button nbButton status="primary" (click)="submitForm()">save</button> -->
+    <button nbButton status="primary" outline (click)="hideModal()">Cancel </button>
   </div>
 </ngx-side-modal>
