Updated file upload

--- a/src/app/modules/expense/expense-report/expense-report.component.html
+++ b/src/app/modules/expense/expense-report/expense-report.component.html
@@ -7,9 +7,8 @@
   <ngx-tableheader *ngIf="!showEmpty"></ngx-tableheader
   ><ngx-default-content
     *ngIf="showEmpty"
-    pageHeader="let's set up your expenses"
-    pageDescription="Now, you can add your request"
-    buttonValue="undefined"
+    pageHeader=""
+    pageDescription="Now, you have no data to report on at this time"
     (buttonClick)="createNewClicked()"
   >
   </ngx-default-content>
