--- a/src/app/modules/training/administration/administration.component.html
+++ b/src/app/modules/training/administration/administration.component.html
@@ -6,7 +6,7 @@
 >
 </ngx-componentsheader>
 <div style="padding: 5px"></div>
-
+<!-- 
 <div class="container" style="background-color: #ffffff">
   <nb-tabset (changeTab)="tabSelected($event)">
     <nb-tab tabTitle="Vendors" [tabId]="TABS.vendors">
@@ -241,8 +241,12 @@
               </div>
             </div>
           </form>
-        </div>
+        </div> -->
+
+
         <!-- Upload Vendor with Excel -->
+       
+         <!--
         <div class="form-group row">
           <label for="specialization" class="col-sm-3 col-form-label" style="font-weight: bold;"></label>
           <div class="col-md-4 col-lg-4 col-sm-4">
@@ -256,10 +260,12 @@
       </form>
 
     </div>
-
+-->
             <!-- Upload Vendor with Excel -->
 
-        <div
+  
+   <!--
+            <div
           *ngIf="uploadVendor"
           class="container"
           style="background-color: white; height: auto"
@@ -335,8 +341,13 @@
 
       </div>
     </nb-tab>
+    -->
+
+
     <!-- Training Types -->
 
+
+      <!--
     <nb-tab tabTitle="Types" [tabId]="TABS.types">
       <ngx-default-content
         *ngIf="showEmpty && !showModal"
@@ -601,4 +612,4 @@
       </nb-card>
     </nb-tab>
   </nb-tabset>
-</div>
+</div> -->
